--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </div>
 
     <div class="result">
-      <p>Paper covers rock. You win!</p>
+      <p>Can you beat the computer?</p>
+      <p>Pick a hand to find out!</p>
     </div>
 
     <div class="choices">
