--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="css/main.css">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-3451503480927901",
+      enable_page_level_ads: true
+    });
+  </script>
   </head>
   <body>
     <header>
